@@ -1,19 +1,18 @@
--Xms512m
-
--Xmx1024m
-
--XX:MaxPermSize=350m
-
--XX:ReservedCodeCacheSize=64m
-
--XX:NewRatio=9
-
--XX:SurvivorRatio=3
-
--XX:+UseParallelOldGC
-
+-XX:+UseCodeCacheFlushing
 -XX:+TieredCompilation
-
 -Dfile.encoding=UTF-8
+-Dsun.io.useCanonCaches=false
+-Djava.net.preferIPv4Stack=true
 
--ea
+-server
+-Xms128m
+-Xmx512m
+-XX:MaxPermSize=250m
+-XX:ReservedCodeCacheSize=64m
+-XX:+UseConcMarkSweepGC
+-XX:+AggressiveOpts
+-XX:+CMSClassUnloadingEnabled
+-XX:+CMSIncrementalMode
+-XX:+CMSIncrementalPacing
+-XX:CMSIncrementalDutyCycleMin=0
+-XX:-TraceClassUnloading
